syntax = "proto3";
package pb;

option go_package = "github.com/snple/kokomi/pb;pb";

message Cable {
    string id = 1;
    string device_id = 2;
    string name = 3;
    string desc = 4;
    string tags = 5;
    string type = 6;
    string config = 7;
    sint32 link = 8;
    sint32 status = 9;
    sint32 save = 10;
    int64 created = 11;
    int64 updated = 12;
    int64 deleted = 13;
}

message Wire {
    string id = 1;
    string device_id = 2;
    string cable_id = 3;
    string name = 4;
    string desc = 5;
    string tags = 6;
    string type = 7;
    string data_type = 8;
    string value = 9;
    string h_value = 10;
    string l_value = 11;
    string config = 12;
    sint32 status = 13;
    sint32 access = 14;
    sint32 save = 15;
    int64 created = 16;
    int64 updated = 17;
    int64 deleted = 18;
}

message WireValue {
    string id = 1;
    string value = 2;
    int64 updated = 3;
}

message WireNameValue {
    string id = 1;
    string name = 2;
    string value = 3;
    int64 updated = 4;
}

message WireValueUpdated {
    string id = 1;
    string device_id = 2;
    string cable_id = 3;
    string value = 4;
    int64 updated = 5;
}
