syntax = "proto3";
package nodes;

option go_package = "github.com/snple/beacon/pb/nodes;nodes";

import "wire_message.proto";
import "generic_message.proto";

// wire
message WireListRequest {
    pb.Page page = 1;
    // string node_id = 2;
    string tags = 3;
    string source = 4;
}

message WireListResponse {
    pb.Page page = 1;
    uint32 count = 2;
    repeated pb.Wire wires = 3;
}

message WirePullRequest {
    int64 after = 1;
    uint32 limit = 2;
    // string node_id = 3;
    string source = 4;
}

message WirePullResponse {
    int64 after = 1;
    uint32 limit = 2;
    repeated pb.Wire wires = 3;
}

service WireService {
    rpc Create(pb.Wire) returns (pb.Wire) {}
    rpc Update(pb.Wire) returns (pb.Wire) {}
    rpc View(pb.Id) returns (pb.Wire) {}
    rpc Name(pb.Name) returns (pb.Wire) {}
    rpc Delete(pb.Id) returns (pb.MyBool) {}
    rpc List(WireListRequest) returns (WireListResponse) {}
    rpc ViewWithDeleted(pb.Id) returns (pb.Wire) {}
    rpc Pull(WirePullRequest) returns (WirePullResponse) {}
    rpc Sync(pb.Wire) returns (pb.MyBool) {}
}

// pin
message PinListRequest {
    pb.Page page = 1;
    // string node_id = 2;
    string wire_id = 3;
    string tags = 4;
}

message PinListResponse {
    pb.Page page = 1;
    uint32 count = 2;
    repeated pb.Pin pins = 3;
}

message PinPullRequest {
    int64 after = 1;
    uint32 limit = 2;
    // string node_id = 3;
    string wire_id = 4;
}

message PinPullResponse {
    int64 after = 1;
    uint32 limit = 2;
    repeated pb.Pin pins = 3;
}

message PinPullValueRequest {
    int64 after = 1;
    uint32 limit = 2;
    // string node_id = 3;
    string wire_id = 4;
}

message PinPullValueResponse {
    int64 after = 1;
    uint32 limit = 2;
    repeated pb.PinValueUpdated pins = 3;
}

service PinService {
    rpc Create(pb.Pin) returns (pb.Pin) {}
    rpc Update(pb.Pin) returns (pb.Pin) {}
    rpc View(pb.Id) returns (pb.Pin) {}
    rpc Name(pb.Name) returns (pb.Pin) {}
    rpc Delete(pb.Id) returns (pb.MyBool) {}
    rpc List(PinListRequest) returns (PinListResponse) {}
    rpc Pull(PinPullRequest) returns (PinPullResponse) {}
    rpc ViewWithDeleted(pb.Id) returns (pb.Pin) {}
    rpc Sync(pb.Pin) returns (pb.MyBool) {}

    rpc GetValue(pb.Id) returns (pb.PinValue) {}
    rpc SetValue(pb.PinValue) returns (pb.MyBool) {}
    rpc GetValueByName(pb.Name) returns (pb.PinNameValue) {}
    rpc SetValueByName(pb.PinNameValue) returns (pb.MyBool) {}
    rpc ViewValue(pb.Id) returns (pb.PinValueUpdated) {}
    rpc DeleteValue(pb.Id) returns (pb.MyBool) {}
    rpc PullValue(PinPullValueRequest) returns (PinPullValueResponse) {}
    rpc SyncValue(pb.PinValue) returns (pb.MyBool) {}

    rpc GetWrite(pb.Id) returns (pb.PinValue) {}
    rpc SetWrite(pb.PinValue) returns (pb.MyBool) {}
    rpc GetWriteByName(pb.Name) returns (pb.PinNameValue) {}
    rpc SetWriteByName(pb.PinNameValue) returns (pb.MyBool) {}
    rpc ViewWrite(pb.Id) returns (pb.PinValueUpdated) {}
    rpc DeleteWrite(pb.Id) returns (pb.MyBool) {}
    rpc PullWrite(PinPullValueRequest) returns (PinPullValueResponse) {}
    rpc SyncWrite(pb.PinValue) returns (pb.MyBool) {}
}
